# paper_sources

./: README.md
nodelets_test1/: CMakeLists.txt  nobond.launch  nodelets.launch  nodelets_test1_pub.xml  nodelets_test1_sub.xml  package.xml  run_nobond_tests.sh  run_nodelets_tests.sh  standalone.launch
nodelets_test1/msg/: latency_test_message.msg
nodelets_test1/src/: pubnodelet.cpp  subnodelet.cpp
pubsub/: CMakeLists.txt  package.xml  pubsub.launch  run_pubsub_tests.sh
pubsub/msg/: latency_test_message.msg
pubsub/src/: pub.cpp  sub.cpp
