<package>
<name>nodelets_test1</name>
<version>0.0.7</version>
<description>Package for 1st test of pub-sub nodelets.</description>
<maintainer email="martien@todo.todo">Martien Lagerweij</maintainer>
<author>Martien Lagerweij</author>
<license>None</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>nodelet</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<run_depend>nodelet</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<export>
	<nodelet plugin="${prefix}/nodelets_test1_sub.xml"/>
	<nodelet plugin="${prefix}/nodelets_test1_pub.xml"/>
</export>
</package>

